typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName24.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            36,
        ),
        hi: BytePos(
            37,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName24.ts:3:10
  |
3 |     set [e](v) { }
  |          ^

